--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -48,7 +48,7 @@
           </div>
   
           {{ if (gt .WordCount 100 ) }}
-          <div class="toc-container sticky top-14 transition-all">
+          <div class="toc-container sticky top-16 md:top-14 transition-all">
             <button type="button" class="collapsible bg-sky-100 dark:bg-slate-900 border-none cursor-pointer flex justify-between items-center font-bold px-7 py-3 rounded-t-lg rounded-b-lg text-left w-full">
               <span class="m-0">Table of Contents</span>
               <i data-feather="plus" class="w-4 h-4 stroke-[3px]"></i>
