--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -105,8 +105,8 @@
                     {{ $title := .title }}
                     <a href="{{ printf .url }}" class="text-slate-900 dark:text-slate-50 hover:text-sky-600 dark:hover:text-sky-500" title="{{ $title }}" target="_blank">
                       {{ with resources.Get (.image) }}
-                          {{ $image := .Resize "386x webp" }}
-                          <img data-src="{{ $image.Permalink }}" class="lozad" alt="{{ $title }}">
+                          {{ $image := .Resize (printf "%dx%d webp" .Width .Height) }}
+                          <img data-src="{{ $image.Permalink }}" class="lozad" alt="{{ $title }}" width="{{ .Width }}" height="{{ .Height }}">
                       {{ end }}
                     </a>
                   {{ end }}
