--- a/layouts/shortcodes/imgresize.html
+++ b/layouts/shortcodes/imgresize.html
@@ -1,5 +1,5 @@
 {{ $image := (.Page.Resources.GetMatch (.Get 0)) }}
 {{ $resizedImage := $image.Resize "720x webp" }}
 <a href="{{ $image.RelPermalink }}" target="_blank">
-  <img data-src="{{ $resizedImage.RelPermalink }}" class="h-auto lozad mb-4 rounded-md w-[792px]">
+  <img data-src="{{ $resizedImage.RelPermalink }}" class="h-auto lozad mb-4 rounded-md w-[792px]" alt="{{ $resizedImage }}" width="{{ $resizedImage.Width }}" height="{{ $resizedImage.Height }}">
 </a>
