--- a/layouts/partials/mailchimp-email.html
+++ b/layouts/partials/mailchimp-email.html
@@ -15,7 +15,7 @@
         {{ if isset $site.Params "pp" }}
           {{ with resources.Get ($site.Params.pp) }}
               {{ $brand := .Resize "x86 webp" }}
-              <img data-src="{{ $brand.Permalink }}" class="lozad rounded-full sm:w-24 sm:h-24" alt="{{ $site.Title }}'s photo">
+              <img data-src="{{ $brand.Permalink }}" class="lozad rounded-full sm:w-24 sm:h-24" alt="{{ $site.Title }}'s photo" width="{{ $brand.Width }}" height="{{ $brand.Height }}">
           {{ end }}
         {{ else }}
             <h1 class="mb-0">{{ $site.Title }}</h1>
