--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -38,11 +38,11 @@
           <div class="h-min mb-5 overflow-hidden rounded-2xl">
             {{ with .Resources.GetMatch (.Params.featured_image) }}
               {{ $thumb := .Resize "720x webp" }}
-              <img data-src="{{ $thumb.Permalink }}" class="lozad w-full" alt="{{ .Title }}">
+              <img data-src="{{ $thumb.Permalink }}" class="lozad w-full" alt="{{ .Title }}" width="{{ $thumb.Width }}" height="{{ $thumb.Height }}">
             {{ else }}
               {{ with resources.Get ($site.Params.default_image) }}
                 {{ $thumb := .Resize "720x webp" }}
-                <img data-src="{{ $thumb.Permalink }}" class="lozad object-cover w-full" alt="{{ .Title }}">
+                <img data-src="{{ $thumb.Permalink }}" class="lozad object-cover w-full" alt="{{ .Title }}" width="{{ $thumb.Width }}" height="{{ $thumb.Height }}">
               {{ end }}
             {{ end }}
           </div>
@@ -70,7 +70,7 @@
             <div class="flex items-center gap-4 mb-4">
               {{ with resources.Get ($site.Params.pp) }}
                   {{ $brand := .Resize "x78 webp" }}
-                  <img data-src="{{ $brand.Permalink }}" class="lozad rounded-full w-16 h-16" alt="{{ $site.Title }}'s photo">
+                  <img data-src="{{ $brand.Permalink }}" class="lozad rounded-full w-16 h-16" alt="{{ $site.Title }}'s photo" width="{{ $brand.Width }}" height="{{ $brand.Height }}">
               {{ end }}
               <span class="font-bold">{{ $site.Author.name }}</span>
             </div>
@@ -106,7 +106,7 @@
                     <a href="{{ printf .url }}" class="text-slate-900 dark:text-slate-50 hover:text-sky-600 dark:hover:text-sky-500" title="{{ $title }}" target="_blank">
                       {{ with resources.Get (.image) }}
                           {{ $image := .Resize (printf "%dx%d webp" .Width .Height) }}
-                          <img data-src="{{ $image.Permalink }}" class="lozad" alt="{{ $title }}" width="{{ .Width }}" height="{{ .Height }}">
+                          <img data-src="{{ $image.Permalink }}" class="lozad" alt="{{ $title }}" width="{{ .Width }}" height="{{ .Height }}" width="{{ $image.Width }}" height="{{ $image.Height }}">
                       {{ end }}
                     </a>
                   {{ end }}
